--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <a class="navbar-brand" href="/"><%= image_tag 'logo-small' %></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Sign Up</a>
+          <a class="nav-link" href="<%= new_user_path %>">Sign Up</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Sign In</a>
