--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,12 @@
-
-  <section class="header-11-sub">
-      <div class="background">&nbsp;</div>
-      <div class="container">
+<div class="container">
           <div class="row">
-              <div class="col-sm-4">
+              <div class="col-sm-12">
                   <h3>The Dating Site for Ruby Experts</h3>
                   <p>CoderDating is the first dating website just for experienced Ruby on Rails engineers.</p>
                   <div class="signup-form">
-                    <%= render 'users/form' %>
+                    <%= render 'form' %>
                   </div>  
                   <div class="additional-links">By signing up you agree to <a href="#">Terms of Use</a> and <a href="#">Privacy</a></div>
               </div>
-              <div class="col-sm-7 col-sm-offset-1 player-wrapper">
-                  <div class="player">
-                      <%= image_tag 'hero' %>
-                  </div>
-              </div>
           </div>
       </div>
-  </section>
-
